--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  --mOrange: #ff7200;
+  --Orange: #ff7200;
 }
 
 body {
@@ -51,9 +51,11 @@ nav ul li:first-child {
 }
 nav ul li a:hover,
 .icons i:hover {
-  color: var(--mOrange);
+  color: var(--Orange);
 }
-
+.icons i {
+  transition: 0.4s ease-in-out;
+}
 /* Login Styles */
 
 .login {
@@ -61,7 +63,7 @@ nav ul li a:hover,
 }
 .login h3 :first-child,
 .logo {
-  color: var(--mOrange);
+  color: var(--Orange);
 }
 .login h3 {
   letter-spacing: 1.8px;
@@ -75,7 +77,7 @@ nav ul li a:hover,
   display: block;
 }
 .login button {
-  background-color: var(--mOrange);
+  background-color: var(--Orange);
   padding: 0.6rem 2rem;
   border-radius: 10px;
   border: none;
@@ -104,7 +106,7 @@ nav ul li a:hover,
   max-width: 300px;
 }
 .form h2 {
-  color: var(--mOrange);
+  color: var(--Orange);
   background-color: black;
   padding: 0.6rem 2rem;
   margin: 0;
@@ -118,7 +120,7 @@ nav ul li a:hover,
   border-top: 0;
   border-right: 0;
   border-left: 0;
-  border-bottom: 2px solid var(--mOrange);
+  border-bottom: 2px solid var(--Orange);
   /* border: none; */
   width: 100%;
 }
@@ -140,7 +142,7 @@ nav ul li a:hover,
 }
 .form p a {
   text-decoration: none;
-  color: var(--mOrange);
+  color: var(--Orange);
 }
 .form p {
   text-align: center;
